Update for final export

--- a/natural-conversion/natural_conversion_aws_batch.ipynb
+++ b/natural-conversion/natural_conversion_aws_batch.ipynb
@@ -2,12 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "import boto3\n",
-    "from pprint import pprint"
+    "from pprint import pprint\n",
+    "client = boto3.client('batch')"
    ]
   },
   {
@@ -84,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -94,38 +95,40 @@
       "{'ResponseMetadata': {'HTTPHeaders': {'access-control-allow-origin': '*',\n",
       "                                      'access-control-expose-headers': 'X-amzn-errortype,X-amzn-requestid,X-amzn-errormessage,X-amzn-trace-id,X-amz-apigw-id,date',\n",
       "                                      'connection': 'keep-alive',\n",
-      "                                      'content-length': '168',\n",
+      "                                      'content-length': '164',\n",
       "                                      'content-type': 'application/json',\n",
-      "                                      'date': 'Mon, 28 Feb 2022 13:35:16 GMT',\n",
-      "                                      'x-amz-apigw-id': 'OQVfSH3vIAMFu5g=',\n",
-      "                                      'x-amzn-requestid': '637110ab-a8c4-4673-8808-d0400a32664a',\n",
-      "                                      'x-amzn-trace-id': 'Root=1-621ccf94-515de925178c525d40199afd'},\n",
+      "                                      'date': 'Fri, 04 Mar 2022 03:19:56 GMT',\n",
+      "                                      'x-amz-apigw-id': 'OcHGfFCyoAMFn9Q=',\n",
+      "                                      'x-amzn-requestid': 'a67cf1db-c4ab-495d-8cdd-78e5e0f7dce5',\n",
+      "                                      'x-amzn-trace-id': 'Root=1-6221855c-6b46f17c6897d5d442a4cfc9'},\n",
       "                      'HTTPStatusCode': 200,\n",
-      "                      'RequestId': '637110ab-a8c4-4673-8808-d0400a32664a',\n",
+      "                      'RequestId': 'a67cf1db-c4ab-495d-8cdd-78e5e0f7dce5',\n",
       "                      'RetryAttempts': 0},\n",
-      " 'jobArn': 'arn:aws:batch:us-east-1:273676533378:job/45a1a032-0ba1-44b2-8b6e-f42fb6625a2f',\n",
-      " 'jobId': '45a1a032-0ba1-44b2-8b6e-f42fb6625a2f',\n",
-      " 'jobName': 'natural_conversion'}\n"
+      " 'jobArn': 'arn:aws:batch:us-east-1:273676533378:job/b24e99c3-2408-4357-af13-95bbb6609065',\n",
+      " 'jobId': 'b24e99c3-2408-4357-af13-95bbb6609065',\n",
+      " 'jobName': 'cropland_match'}\n"
      ]
     }
    ],
    "source": [
-    "#job_name = \"cropland_match\"\n",
-    "#n_cpus = \"2\"\n",
-    "#memory = \"8000\"\n",
-    "#array_size = 1296\n",
+    "job_name = \"cropland_match\"\n",
+    "n_cpus = \"2\"\n",
+    "memory = \"16000\"\n",
+    "array_size = 1296\n",
+    "timeout = 3600*6\n",
+    "job_queue ='spot_standard_disk'\n",
     "\n",
-    "job_name = \"natural_conversion\"\n",
-    "n_cpus = \"32\"\n",
-    "memory = \"256000\"\n",
-    "array_size = 1\n",
+    "#job_name = \"natural_conversion\"\n",
+    "#n_cpus = \"62\"\n",
+    "#memory = \"350000\"\n",
+    "#array_size = 1\n",
+    "#timeout = 3600*12\n",
+    "#job_queue ='spot_standard_disk'\n",
     "\n",
     "#job_queue = 'ondemand_large_disk'\n",
-    "#job_queue ='spot_large_disk'\n",
-    "job_queue ='spot_fleet_1TB-io2-disk'\n",
-    "#job_queue ='ondemand_fleet_1TB-io2-disk'\n",
     "#job_queue ='spot_standard_disk'\n",
-    "#job_queue = 'ondemand_large_disk_progressive_fit'\n",
+    "#job_queue ='spot_fleet_1TB-io2-disk'\n",
+    "#job_queue ='ondemand_fleet_1TB-io2-disk'\n",
     "\n",
     "job_params = dict(\n",
     "    jobName=f'{job_name}',\n",
@@ -147,7 +150,7 @@
     "        ],\n",
     "    },\n",
     "    timeout={\n",
-    "        'attemptDurationSeconds': 3600*12\n",
+    "        'attemptDurationSeconds': timeout\n",
     "    },\n",
     "    retryStrategy={ \n",
     "        \"attempts\": 4,\n",
@@ -159,6 +162,10 @@
     "            },\n",
     "            {\n",
     "                \"onStatusReason\" :\"CannotInspectContainer*\",  # docker errors usually due to i/o\n",
+    "                \"action\": \"RETRY\"\n",
+    "            },\n",
+    "            {\n",
+    "                \"onStatusReason\" :\"OutOfMemoryError*\",\n",
     "                \"action\": \"RETRY\"\n",
     "            },\n",
     "            {\n",
