Update for final calculations

--- a/natural-conversion/cropland_tiles_to_mosaic.ipynb
+++ b/natural-conversion/cropland_tiles_to_mosaic.ipynb
@@ -2,27 +2,57 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "from osgeo import gdal\n",
     "from pathlib import Path\n",
-    "import tempfile"
+    "import tempfile\n",
+    "\n",
+    "cropland_path = Path(\"D:/Documents and Settings/azvoleff/Desktop/croplands\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processing 2019...\n",
+      "Building vrt\n",
+      "Saving cog to D:\\Documents and Settings\\azvoleff\\Desktop\\croplands\\Croplands_300m_2019.tif\n",
+      "Processing 2011...\n",
+      "Building vrt\n",
+      "Saving cog to D:\\Documents and Settings\\azvoleff\\Desktop\\croplands\\Croplands_300m_2011.tif\n",
+      "Processing 2003...\n",
+      "Building vrt\n",
+      "Saving cog to D:\\Documents and Settings\\azvoleff\\Desktop\\croplands\\Croplands_300m_2003.tif\n",
+      "Processing 2015...\n",
+      "Building vrt\n",
+      "Saving cog to D:\\Documents and Settings\\azvoleff\\Desktop\\croplands\\Croplands_300m_2015.tif\n",
+      "Processing 2007...\n",
+      "Building vrt\n",
+      "Saving cog to D:\\Documents and Settings\\azvoleff\\Desktop\\croplands\\Croplands_300m_2007.tif\n"
+     ]
+    }
+   ],
    "source": [
-    "cropland_path = Path(\"D:/Documents and Settings/azvoleff/Desktop/croplands\")\n",
-    "\n",
-    "crop_vrt_2003 = Path(tempfile.NamedTemporaryFile(suffix='.vrt', delete=False).name)\n",
-    "crop_vrt_2015 = Path(tempfile.NamedTemporaryFile(suffix='.vrt', delete=False).name)\n",
-    "ds_crop_2003 = gdal.BuildVRT(str(crop_vrt_2003), [str(p) for p in cropland_path.glob('Croplands_300m_2003_*.tif')])\n",
-    "ds_crop_2015 = gdal.BuildVRT(str(crop_vrt_2015), [str(p) for p in cropland_path.glob('Croplands_300m_2015_*.tif')])"
+    "years = [2019, 2011, 2003, 2015, 2007]\n",
+    "for year in years:\n",
+    "    print(f'Processing {year}...')\n",
+    "    crop_vrt = Path(tempfile.NamedTemporaryFile(suffix='.vrt', delete=False).name)\n",
+    "    print('Building vrt')\n",
+    "    ds_crop = gdal.BuildVRT(str(crop_vrt), [str(p) for p in cropland_path.glob(f'Croplands_300m_{year}_*.tif')])\n",
+    "    out_tif = cropland_path / f'Croplands_300m_{year}.tif'\n",
+    "    print(f'Saving cog to {out_tif}')\n",
+    "    gdal.Translate(str(out_tif), ds_crop,\n",
+    "       creationOptions=[\n",
+    "           'BIGTIFF=YES', 'COMPRESS=LZW', 'NUM_THREADS=ALL_CPUS'\n",
+    "       ], format='COG')"
    ]
   },
   {
@@ -30,21 +60,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "out_crops_2003 = cropland_path / 'Croplands_300m_2003.tif'\n",
-    "out_crops_2015 = cropland_path / 'Croplands_300m_2015.tif'\n",
-    "\n",
-    "out_files = [out_crops_2003, out_crops_2015],\n",
-    "in_ds = [ds_crop_2003, ds_crop_2015]\n",
-    "for out_file, in_ds in zip(\n",
-    "    [out_crops_2003, out_crops_2015],\n",
-    "    [ds_crop_2003, ds_crop_2015]\n",
-    "):\n",
-    "    gdal.Translate(str(out_file), in_ds,\n",
-    "       creationOptions=[\n",
-    "           'BIGTIFF=YES', 'COMPRESS=LZW', 'NUM_THREADS=ALL_CPUS'\n",
-    "       ], format='COG')"
-   ]
+   "source": []
   }
  ],
  "metadata": {
