--- a/natural-conversion/natural_conversion_aws_batch.ipynb
+++ b/natural-conversion/natural_conversion_aws_batch.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -95,35 +95,43 @@
       "{'ResponseMetadata': {'HTTPHeaders': {'access-control-allow-origin': '*',\n",
       "                                      'access-control-expose-headers': 'X-amzn-errortype,X-amzn-requestid,X-amzn-errormessage,X-amzn-trace-id,X-amz-apigw-id,date',\n",
       "                                      'connection': 'keep-alive',\n",
-      "                                      'content-length': '164',\n",
+      "                                      'content-length': '168',\n",
       "                                      'content-type': 'application/json',\n",
-      "                                      'date': 'Fri, 04 Mar 2022 03:19:56 GMT',\n",
-      "                                      'x-amz-apigw-id': 'OcHGfFCyoAMFn9Q=',\n",
-      "                                      'x-amzn-requestid': 'a67cf1db-c4ab-495d-8cdd-78e5e0f7dce5',\n",
-      "                                      'x-amzn-trace-id': 'Root=1-6221855c-6b46f17c6897d5d442a4cfc9'},\n",
+      "                                      'date': 'Fri, 04 Mar 2022 22:01:05 GMT',\n",
+      "                                      'x-amz-apigw-id': 'OerVNEWDoAMF_MQ=',\n",
+      "                                      'x-amzn-requestid': '0be0181a-f52a-4bfb-97fa-93ea080a65be',\n",
+      "                                      'x-amzn-trace-id': 'Root=1-62228c21-2c4c155344525c6e1a7dc67c'},\n",
       "                      'HTTPStatusCode': 200,\n",
-      "                      'RequestId': 'a67cf1db-c4ab-495d-8cdd-78e5e0f7dce5',\n",
+      "                      'RequestId': '0be0181a-f52a-4bfb-97fa-93ea080a65be',\n",
       "                      'RetryAttempts': 0},\n",
-      " 'jobArn': 'arn:aws:batch:us-east-1:273676533378:job/b24e99c3-2408-4357-af13-95bbb6609065',\n",
-      " 'jobId': 'b24e99c3-2408-4357-af13-95bbb6609065',\n",
-      " 'jobName': 'cropland_match'}\n"
+      " 'jobArn': 'arn:aws:batch:us-east-1:273676533378:job/d5d338a8-91de-4714-94f4-2d75fcdb05e1',\n",
+      " 'jobId': 'd5d338a8-91de-4714-94f4-2d75fcdb05e1',\n",
+      " 'jobName': 'natural_conversion'}\n"
      ]
     }
    ],
    "source": [
-    "job_name = \"cropland_match\"\n",
-    "n_cpus = \"2\"\n",
-    "memory = \"16000\"\n",
-    "array_size = 1296\n",
-    "timeout = 3600*6\n",
-    "job_queue ='spot_standard_disk'\n",
+    "#job_name = \"cropland_match\"\n",
+    "#n_cpus = \"1\"\n",
+    "#memory = \"16000\"\n",
+    "#array_size = 648\n",
+    "#timeout = 3600*2\n",
+    "#job_queue ='spot_standard_disk'\n",
+    "#year = '2007'\n",
     "\n",
-    "#job_name = \"natural_conversion\"\n",
+    "#job_name = \"esa_cci\"\n",
     "#n_cpus = \"62\"\n",
     "#memory = \"350000\"\n",
     "#array_size = 1\n",
-    "#timeout = 3600*12\n",
+    "#timeout = 3600*2\n",
     "#job_queue ='spot_standard_disk'\n",
+    "\n",
+    "job_name = \"natural_conversion\"\n",
+    "n_cpus = \"60\"\n",
+    "memory = \"256000\"\n",
+    "array_size = 1\n",
+    "timeout = 3600*2\n",
+    "job_queue ='spot_fleet_1TB-io2-disk'\n",
     "\n",
     "#job_queue = 'ondemand_large_disk'\n",
     "#job_queue ='spot_standard_disk'\n",
@@ -147,6 +155,8 @@
     "        ],\n",
     "        'command': [\n",
     "            f'{job_name}'\n",
+    "            #'--year',\n",
+    "            #year\n",
     "        ],\n",
     "    },\n",
     "    timeout={\n",
