Write to netcdf as intermediate step

--- a/natural-conversion/natural_conversion_aws_batch.ipynb
+++ b/natural-conversion/natural_conversion_aws_batch.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -97,15 +97,15 @@
       "                                      'connection': 'keep-alive',\n",
       "                                      'content-length': '168',\n",
       "                                      'content-type': 'application/json',\n",
-      "                                      'date': 'Fri, 04 Mar 2022 22:01:05 GMT',\n",
-      "                                      'x-amz-apigw-id': 'OerVNEWDoAMF_MQ=',\n",
-      "                                      'x-amzn-requestid': '0be0181a-f52a-4bfb-97fa-93ea080a65be',\n",
-      "                                      'x-amzn-trace-id': 'Root=1-62228c21-2c4c155344525c6e1a7dc67c'},\n",
+      "                                      'date': 'Tue, 08 Mar 2022 23:49:09 GMT',\n",
+      "                                      'x-amz-apigw-id': 'OsG6aEQUIAMFWpw=',\n",
+      "                                      'x-amzn-requestid': 'cc90a420-012f-49b9-b944-1fbf1cfa1e1e',\n",
+      "                                      'x-amzn-trace-id': 'Root=1-6227eb75-137aec0165c64de83b38f54b'},\n",
       "                      'HTTPStatusCode': 200,\n",
-      "                      'RequestId': '0be0181a-f52a-4bfb-97fa-93ea080a65be',\n",
+      "                      'RequestId': 'cc90a420-012f-49b9-b944-1fbf1cfa1e1e',\n",
       "                      'RetryAttempts': 0},\n",
-      " 'jobArn': 'arn:aws:batch:us-east-1:273676533378:job/d5d338a8-91de-4714-94f4-2d75fcdb05e1',\n",
-      " 'jobId': 'd5d338a8-91de-4714-94f4-2d75fcdb05e1',\n",
+      " 'jobArn': 'arn:aws:batch:us-east-1:273676533378:job/5a41dc0b-d171-4d04-a21a-af077e9c1dc6',\n",
+      " 'jobId': '5a41dc0b-d171-4d04-a21a-af077e9c1dc6',\n",
       " 'jobName': 'natural_conversion'}\n"
      ]
     }
@@ -127,10 +127,10 @@
     "#job_queue ='spot_standard_disk'\n",
     "\n",
     "job_name = \"natural_conversion\"\n",
-    "n_cpus = \"60\"\n",
-    "memory = \"256000\"\n",
+    "n_cpus = \"48\"\n",
+    "memory = \"300000\"\n",
     "array_size = 1\n",
-    "timeout = 3600*2\n",
+    "timeout = 3600*12\n",
     "job_queue ='spot_fleet_1TB-io2-disk'\n",
     "\n",
     "#job_queue = 'ondemand_large_disk'\n",
