--- a/natural-conversion/natural_conversion_aws_batch.ipynb
+++ b/natural-conversion/natural_conversion_aws_batch.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -95,18 +95,18 @@
       "{'ResponseMetadata': {'HTTPHeaders': {'access-control-allow-origin': '*',\n",
       "                                      'access-control-expose-headers': 'X-amzn-errortype,X-amzn-requestid,X-amzn-errormessage,X-amzn-trace-id,X-amz-apigw-id,date',\n",
       "                                      'connection': 'keep-alive',\n",
-      "                                      'content-length': '168',\n",
+      "                                      'content-length': '163',\n",
       "                                      'content-type': 'application/json',\n",
-      "                                      'date': 'Tue, 08 Mar 2022 23:49:09 GMT',\n",
-      "                                      'x-amz-apigw-id': 'OsG6aEQUIAMFWpw=',\n",
-      "                                      'x-amzn-requestid': 'cc90a420-012f-49b9-b944-1fbf1cfa1e1e',\n",
-      "                                      'x-amzn-trace-id': 'Root=1-6227eb75-137aec0165c64de83b38f54b'},\n",
+      "                                      'date': 'Tue, 03 May 2022 02:49:30 GMT',\n",
+      "                                      'x-amz-apigw-id': 'Rhy5IHFxoAMFeQw=',\n",
+      "                                      'x-amzn-requestid': '371dfd09-7920-4200-b2ba-48acb2ca394c',\n",
+      "                                      'x-amzn-trace-id': 'Root=1-6270983a-72cc28044db661791e4b1393'},\n",
       "                      'HTTPStatusCode': 200,\n",
-      "                      'RequestId': 'cc90a420-012f-49b9-b944-1fbf1cfa1e1e',\n",
+      "                      'RequestId': '371dfd09-7920-4200-b2ba-48acb2ca394c',\n",
       "                      'RetryAttempts': 0},\n",
-      " 'jobArn': 'arn:aws:batch:us-east-1:273676533378:job/5a41dc0b-d171-4d04-a21a-af077e9c1dc6',\n",
-      " 'jobId': '5a41dc0b-d171-4d04-a21a-af077e9c1dc6',\n",
-      " 'jobName': 'natural_conversion'}\n"
+      " 'jobArn': 'arn:aws:batch:us-east-1:273676533378:job/0ce7e078-4948-4a23-b897-1662cfd6447f',\n",
+      " 'jobId': '0ce7e078-4948-4a23-b897-1662cfd6447f',\n",
+      " 'jobName': 'initial_cover'}\n"
      ]
     }
    ],
@@ -126,12 +126,21 @@
     "#timeout = 3600*2\n",
     "#job_queue ='spot_standard_disk'\n",
     "\n",
-    "job_name = \"natural_conversion\"\n",
-    "n_cpus = \"48\"\n",
+    "#job_name = \"natural_conversion\"\n",
+    "#n_cpus = \"48\"\n",
+    "#memory = \"300000\"\n",
+    "#array_size = 1\n",
+    "#timeout = 3600*12\n",
+    "#job_queue ='spot_fleet_1TB-io2-disk'\n",
+    "\n",
+    "\n",
+    "job_name = \"initial_cover\"\n",
+    "n_cpus = \"128\"\n",
     "memory = \"300000\"\n",
     "array_size = 1\n",
     "timeout = 3600*12\n",
     "job_queue ='spot_fleet_1TB-io2-disk'\n",
+    "\n",
     "\n",
     "#job_queue = 'ondemand_large_disk'\n",
     "#job_queue ='spot_standard_disk'\n",
