--- a/natural-conversion/natural_conversion_aws_batch.ipynb
+++ b/natural-conversion/natural_conversion_aws_batch.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -97,15 +97,15 @@
       "                                      'connection': 'keep-alive',\n",
       "                                      'content-length': '163',\n",
       "                                      'content-type': 'application/json',\n",
-      "                                      'date': 'Tue, 03 May 2022 02:49:30 GMT',\n",
-      "                                      'x-amz-apigw-id': 'Rhy5IHFxoAMFeQw=',\n",
-      "                                      'x-amzn-requestid': '371dfd09-7920-4200-b2ba-48acb2ca394c',\n",
-      "                                      'x-amzn-trace-id': 'Root=1-6270983a-72cc28044db661791e4b1393'},\n",
+      "                                      'date': 'Mon, 30 May 2022 10:20:02 GMT',\n",
+      "                                      'x-amz-apigw-id': 'S70M2HW3oAMFs9g=',\n",
+      "                                      'x-amzn-requestid': '2d9e8d1a-ac02-4f95-842b-e1f8aaac7f2c',\n",
+      "                                      'x-amzn-trace-id': 'Root=1-62949a52-4fdc986d60f1cf9130f24925'},\n",
       "                      'HTTPStatusCode': 200,\n",
-      "                      'RequestId': '371dfd09-7920-4200-b2ba-48acb2ca394c',\n",
+      "                      'RequestId': '2d9e8d1a-ac02-4f95-842b-e1f8aaac7f2c',\n",
       "                      'RetryAttempts': 0},\n",
-      " 'jobArn': 'arn:aws:batch:us-east-1:273676533378:job/0ce7e078-4948-4a23-b897-1662cfd6447f',\n",
-      " 'jobId': '0ce7e078-4948-4a23-b897-1662cfd6447f',\n",
+      " 'jobArn': 'arn:aws:batch:us-east-1:273676533378:job/ee418d5a-2dad-4149-92a7-2e5f8e709140',\n",
+      " 'jobId': 'ee418d5a-2dad-4149-92a7-2e5f8e709140',\n",
       " 'jobName': 'initial_cover'}\n"
      ]
     }
